{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 90,
  "lineage": "ff3548a2-0837-4452-3cbc-dbed62acb977",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:659587495811:internet-gateway/igw-04d58bd5266fc3a70",
            "id": "igw-04d58bd5266fc3a70",
            "owner_id": "659587495811",
            "tags": {
              "Name": "aws-cloud-governance-igw"
            },
            "tags_all": {
              "Name": "aws-cloud-governance-igw"
            },
            "vpc_id": "vpc-097738d9ae507ba19"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:659587495811:route-table/rtb-0ce8641e12e118f6f",
            "id": "rtb-0ce8641e12e118f6f",
            "owner_id": "659587495811",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04d58bd5266fc3a70",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aws-cloud-governance-public-rt"
            },
            "tags_all": {
              "Name": "aws-cloud-governance-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-097738d9ae507ba19"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.1.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082138126ee53448b",
            "route_table_id": "rtb-0ce8641e12e118f6f",
            "subnet_id": "subnet-0949a2d4e4ded4483"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "10.0.2.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0831b13874c8aab18",
            "route_table_id": "rtb-0ce8641e12e118f6f",
            "subnet_id": "subnet-01283c1684f1f2916"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:659587495811:security-group/sg-0f690d0e2aaf8b4ec",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f690d0e2aaf8b4ec",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "aws-cloud-governance-sg",
            "name_prefix": "",
            "owner_id": "659587495811",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws-cloud-governance-sg"
            },
            "tags_all": {
              "Name": "aws-cloud-governance-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-097738d9ae507ba19"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.3.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:659587495811:subnet/subnet-0b4b951614fabb455",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4b951614fabb455",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "659587495811",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws-cloud-governance-private-10.0.3.0/24"
            },
            "tags_all": {
              "Name": "aws-cloud-governance-private-10.0.3.0/24"
            },
            "vpc_id": "vpc-097738d9ae507ba19"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "10.0.4.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:659587495811:subnet/subnet-0ff644ae00f783f23",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff644ae00f783f23",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "659587495811",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws-cloud-governance-private-10.0.4.0/24"
            },
            "tags_all": {
              "Name": "aws-cloud-governance-private-10.0.4.0/24"
            },
            "vpc_id": "vpc-097738d9ae507ba19"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.0.1.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:659587495811:subnet/subnet-0949a2d4e4ded4483",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0949a2d4e4ded4483",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "659587495811",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws-cloud-governance-public-10.0.1.0/24"
            },
            "tags_all": {
              "Name": "aws-cloud-governance-public-10.0.1.0/24"
            },
            "vpc_id": "vpc-097738d9ae507ba19"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "10.0.2.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:659587495811:subnet/subnet-01283c1684f1f2916",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01283c1684f1f2916",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "659587495811",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws-cloud-governance-public-10.0.2.0/24"
            },
            "tags_all": {
              "Name": "aws-cloud-governance-public-10.0.2.0/24"
            },
            "vpc_id": "vpc-097738d9ae507ba19"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:659587495811:vpc/vpc-097738d9ae507ba19",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b8c78122a9f16c62",
            "default_route_table_id": "rtb-0786942ec00f214a8",
            "default_security_group_id": "sg-0515d7df58bfd3162",
            "dhcp_options_id": "dopt-095ef467761c7436f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-097738d9ae507ba19",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0786942ec00f214a8",
            "owner_id": "659587495811",
            "tags": {
              "Name": "aws-cloud-governance-vpc"
            },
            "tags_all": {
              "Name": "aws-cloud-governance-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}